[metadata]
name = nagare-sessions-memcache
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Sessions in memcached
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/sessions-memcache
    Tracker = https://github.com/nagareproject/sessions-memcache/issues

[options]
zip_safe = False
packages = find:
install_requires =
    python-memcached
    nagare-services-memcache
    nagare-server-http
    nagare-services-sessions

[options.entry_points]
nagare.sessions =
    memcache = nagare.sessions.memcached_sessions:Sessions

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
